--- a/client/src/app/core/shared/components/header/header.component.html
+++ b/client/src/app/core/shared/components/header/header.component.html
@@ -1,12 +1,17 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <div class="d-flex justify-content-between" style="width: 100%">
+    <div class="d-flex justify-content-between align-items-center" style="width: 100%">
       <div>
         <button mat-button routerLink="/">mean-auth-jwt-example</button>
       </div>
       <div>
         <ng-container *ngIf="isLoggedIn; else notLoggedInTemplate">
-          <button mat-button (click)="logout()">Log out</button>
+          <button mat-button [matMenuTriggerFor]="userMenu">
+            <img alt="avatar" ngx-gravatar [email]="email">
+          </button>
+          <mat-menu #userMenu>
+            <button mat-menu-item (click)="logout()">Log out</button>
+          </mat-menu>
         </ng-container>
         <ng-template #notLoggedInTemplate>
           <a class="mr-2" mat-button routerLink="/login">Log in</a>
