Update code style in client side

--- a/client/src/app/auth/components/login/login.component.html
+++ b/client/src/app/auth/components/login/login.component.html
@@ -16,8 +16,9 @@
             <mat-form-field appearance="fill" style="width: 100%">
               <mat-label>Password</mat-label>
               <input [readonly]="isLoading" formControlName="password" matInput [type]="hide ? 'password' : 'text'">
-              <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+              <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                      [attr.aria-pressed]="hide">
+                <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
               </button>
             </mat-form-field>
           </div>
