--- a/client/src/app/core/components/signup/signup.component.html
+++ b/client/src/app/core/components/signup/signup.component.html
@@ -8,6 +8,18 @@
         <div class="row">
           <div class="col-12">
             <mat-form-field appearance="fill" style="width: 100%">
+              <mat-label>First Name</mat-label>
+              <input [readonly]="isLoading" formControlName="firstName" type="email" matInput>
+            </mat-form-field>
+          </div>
+          <div class="col-12">
+            <mat-form-field appearance="fill" style="width: 100%">
+              <mat-label>Last Name</mat-label>
+              <input [readonly]="isLoading" formControlName="lastName" type="email" matInput>
+            </mat-form-field>
+          </div>
+          <div class="col-12">
+            <mat-form-field appearance="fill" style="width: 100%">
               <mat-label>Email</mat-label>
               <input [readonly]="isLoading" formControlName="email" type="email" matInput>
             </mat-form-field>
@@ -23,7 +35,7 @@
             </mat-form-field>
           </div>
           <div class="col-12">
-            <button [disabled]="isLoading" type="submit" mat-raised-button color="primary">Log in</button>
+            <button [disabled]="isLoading" type="submit" mat-raised-button color="primary">Sign up</button>
           </div>
         </div>
       </form>
