Update not found component

--- a/client/src/app/core/components/not-found/not-found.component.html
+++ b/client/src/app/core/components/not-found/not-found.component.html
@@ -1,1 +1,8 @@
-<p>not-found works!</p>
+<div class="d-flex justify-content-center">
+  <div>
+    <h1 class="mb-4">404 - Page Not Found</h1>
+    <div>
+      <p>Back to <a mat-button routerLink="/">home page</a></p>
+    </div>
+  </div>
+</div>
