Update home page

--- a/client/src/app/core/components/home/home.component.html
+++ b/client/src/app/core/components/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<div class="d-flex justify-content-center">
+  <h1>MEAN Stack Authentication with JWT example - Home Page</h1>
+</div>
