--- a/client/src/scss/base/_common.scss
+++ b/client/src/scss/base/_common.scss
@@ -1,3 +1,16 @@
 body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+.alert {
+  color: #fff;
+  text-align: center;
+
+  &.alert-danger {
+    background-color: #ef5350;
+  }
+
+  &.alert-success {
+    background-color: #66bb6a;
+  }
+}
