Update signup component

--- a/client/src/app/features/settings/components/settings-profile/settings-profile.component.html
+++ b/client/src/app/features/settings/components/settings-profile/settings-profile.component.html
@@ -13,7 +13,7 @@
         </div>
         <mat-card-content>
           <div class="d-flex w-100 justify-content-center">
-            <p><b>Joined at</b> {{ userSettingsProfile.createdAt | date:'yyyy-mm-dd' }}</p>
+            <p><b>Joined at</b> {{ userSettingsProfile.createdAt | date:'yyyy-MM-dd' }}</p>
           </div>
         </mat-card-content>
       </mat-card>
