--- a/client/src/app/auth/components/login/login.component.html
+++ b/client/src/app/auth/components/login/login.component.html
@@ -7,7 +7,7 @@
       <div *ngIf="errorMessage">
         <p class="alert alert-danger p-3">{{ errorMessage }}</p>
       </div>
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <form [formGroup]="loginForm" (keydown.enter)="onSubmit()" (ngSubmit)="onSubmit()">
         <div class="row">
           <div class="col-12 mb-3">
             <mat-form-field appearance="fill" style="width: 100%">
